feat: create header

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,25 @@
-<p>header works!</p>
+<header
+  class="flex w-full justify-between border-b-2 border-zinc-200 bg-[#FAFAFA] px-6 py-3"
+>
+  <div class="flex items-center gap-2">
+    <img class="w-5" src="images/icon-logo.png" alt="Logo" />
+    <h1 class="font-bold">GoTask</h1>
+  </div>
+
+  <nav class="flex items-center gap-4">
+    <button
+      class="size-8 cursor-pointer rounded-lg bg-zinc-50 p-2 transition-all ease-in hover:bg-zinc-200"
+    >
+      <img class="w-5" src="images/icon-notification.png" alt="Notificações" />
+    </button>
+
+    <div class="flex items-center gap-2">
+      <img class="w-6" src="images/icon-avatar.png" alt="Avatar" />
+      <span class="text-sm font-bold">Tasker Cat</span>
+    </div>
+
+    <button class="cursor-pointer">
+      <img class="w-3" src="images/icon-exit.png" alt="Sair" />
+    </button>
+  </nav>
+</header>
